# fraud-ml-pipeline

./: .env.example  .gitignore  LICENSE  README.md  README_JA.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
.github/workflows/: linter.yml
config/: config.yaml  model_config.yaml
deployment/: Dockerfile
docs/: data_descriotion.md  data_descriotion_ja.md
docs/report/: sprint1_report.md  sprint2_report.md
notebooks/: 001_eda.ipynb  001_initial_eda.ipynb  002_feature_engineering.ipynb  003_eda_features_created.ipynb  constants.py  utils.py
reports/: evaluation_results_20250708_114053.json  evaluation_results_20250708_145822.json
scripts/: data_loader.py
src/common/: log_setting.py
src/fraud_detection/: utils.py
src/fraud_detection/api/: main.py
src/fraud_detection/api/schemas/: schemas.py
src/fraud_detection/core/: config.py
src/fraud_detection/data/: database.py  loader.py
src/fraud_detection/evaluation/: metrics.py
src/fraud_detection/features/sql/: create_feature_transactions.sql
src/fraud_detection/models/: base.py  isolation_forest_model.py  pytorch_model.py  xgboost_model.py
src/fraud_detection/pipeline/: evaluator.py  trainer.py
src/scripts/: create_features.py  generate_and_load.py  run_pipeline.py  train_models.py  usage.md
