[tool.poetry]
name = "fraud-detection-pipeline"
version = "0.1.0"
description = "MLOps pipeline for credit card fraud detection"
authors = ["Hikaru Tomizawa <tomizawa.licht@gmail.com>"]
readme = "README.md"
packages = [{ include = "fraud_detection", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
# --- Backend & API ---
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
# --- DB ---
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
# --- ML & Data Analysis ---
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
jupyterlab = "^4.2.1"
xgboost = "^2.0.3"
h2o = "^3.46.0.1"
torch = "^2.4.0"
mlflow = "^2.13.2"
# --- Utilities ---
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
pydantic = "^2.7.1"
pydantic-settings = "^2.10.0"
requests = "^2.32.3"
faker = "^37.4.0"
pyyaml = "^6.0.2"
pytorch-tabnet = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.main.api"
